# semantic-search

./: .gitignore
rust-backend/: Cargo.toml
rust-backend/src/: db.rs  embedding.rs  main.rs
semantic-frontend/: next.config.js  package-lock.json  package.json
semantic-frontend/app/: layout.tsx  page.tsx
semantic-frontend/components/: SearchForm.tsx  SearchResult.tsx
semantic-frontend/lib/: search.ts
semantic-frontend/types/: index.ts
