[package]
name = "semantic-search-service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Semantic search service for HSDS data"

# Force specific versions of rand-related dependencies
[dependencies.rand]
version = "=0.8.5"
features = ["std", "std_rng"]
# Pin version exactly with =

[dependencies.rand_core]
version = "=0.6.4"
# Pin version exactly with =

[dependencies.rand_chacha]
version = "=0.3.1"
# Pin version exactly with =

[dependencies]
# Error handling
anyhow = "1.0.98"

# Logging
log = "0.4.27"
env_logger = "0.11.3"

# Web server
actix-web = "4.5.1"
actix-cors = "0.7.0"

# Date and time
chrono = { version = "0.4.40", features = ["serde"] }

# Async runtime
tokio = { version = "1.44.2", features = ["full"] }

# PostgreSQL
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1", "with-chrono-0_4"] }
bb8 = "0.8.6"
bb8-postgres = "0.8.1"

# Async utilities
futures = "0.3.30"

# Environment variables
dotenv = "0.15.0"

# Serialization/Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Machine Learning - Matching your versions
candle-core = { version = "0.8.4", features = ["metal", "accelerate"] }
candle-nn = { version = "0.8.4", features = ["metal"] }
candle-transformers = { version = "0.8.4" }
tokenizers = "0.13.4"

# Vector types for PostgreSQL
pgvector = { version = "0.4", features = ["postgres"] }

# Override half crate with specific version
half = "2.6.0"