[package]
name = "semantic-search-service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Semantic search service for HSDS data"

[dependencies]
# Error handling (pinned)
anyhow = "=1.0.98"

# Logging (pinned)
log = "=0.4.27"
env_logger = "=0.11.3"

# Web server (updated to match code requirements)
actix-web = "=4.10.2"  # Critical fix for service registration
actix-cors = "=0.7.0"

# Date/time (pinned)
chrono = { version = "=0.4.40", features = ["serde"] }

# Async runtime (pinned)
tokio = { version = "=1.44.2", features = ["full"] }

# PostgreSQL (pinned)
tokio-postgres = { version = "=0.7.13", features = ["with-serde_json-1", "with-chrono-0_4"] }
bb8 = "=0.8.6"
bb8-postgres = "=0.8.1"

# Environment variables (pinned)
dotenv = "=0.15.0"

# Serialization (pinned)
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"

# ML (adjusted for pgvector compatibility)
candle-core = { version = "=0.8.4", features = ["metal", "accelerate"] }
candle-nn = { version = "=0.8.4", features = ["metal"] }
candle-transformers = "=0.8.4"
tokenizers = "=0.13.4"

# Vector types (downgraded to match working code)
pgvector = { version = "=0.2.0", features = ["postgres"] }  # Critical fix for query syntax

# Half-precision (pinned syntax fix)
half = "=2.6.0"

# Required for Actix 4.10 (new addition)
parking_lot = "=0.12.1"  # Resolves actix-web's internal dependency
local-channel = "=0.1.3"  # Needed for async context